--- a/pages/producto.html
+++ b/pages/producto.html
@@ -23,19 +23,16 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/inicio de sesion.html">iniciar sesion <span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="../pages/inicio de sesion.html">Iniciar sesion <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/crear cuenta.html">crear cuenta<span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="../pages/crear cuenta.html">Crear cuenta<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/contactanos.html">contactanos</a>
+					  <a class="nav-link" href="../pages/contactanos.html">Contactanos</a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/crea tu pc.html">crea tu pc</a>
-					</li>
-					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/historial.html">historial</a>
+					  <a class="nav-link" href="../pages/historial.html">Historial</a>
 					</li>
 					
 					<li class="nav-item dropdown">
@@ -63,10 +60,10 @@
 
 </nav>  
 	<div class="PosicionProducto">
-	<p class="PosicionProducto--Precio">19.000</p>
-	<p class="PosicionProducto--cuotas">12x1750</p>
-	<p class="PosicionProducto--Stock">STOCK Disponible</p>
-	<p class="PosicionProducto--Nombre">I5 9400f</p>
+	<p class="PosicionProducto--Stock">STOCK Disponible</p>	
+	<p class="PosicionProducto--Nombre">intel core I5 9400f Coffeelake 4.1ghz 9mb lga1151 </p>
+	<p class="PosicionProducto--Precio">$ 19.000</p>
+	<p class="PosicionProducto--cuotas">en 12 Sin interes</p>
 	</div>
 	<div>
 	<p class="Relleno"></p>
