--- a/index.html
+++ b/index.html
@@ -31,35 +31,18 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-					  <a class="nav-link" href="pages/inicio de sesion.html">iniciar sesion <span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="pages/inicio de sesion.html">Iniciar sesion <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="pages/crear cuenta.html">crear cuenta<span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="pages/crear cuenta.html">Crear cuenta<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="pages/contactanos.html">contactanos</a>
+					  <a class="nav-link" href="pages/contactanos.html">Contactanos</a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="pages/crea tu pc.html">crea tu pc</a>
+					  <a class="nav-link" href="pages/historial.html">Historial</a>
 					</li>
-					<li class="nav-item active">
-					  <a class="nav-link" href="pages/historial.html">historial</a>
-					</li>
-					
-					<li class="nav-item dropdown">
-					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					          Seccion
-					  </a>
-					  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					    <a class="dropdown-item" href="#">amd</a>
-					    <a class="dropdown-item" href="#">intel</a>
-					    <a class="dropdown-item" href="#">Radeon</a>
-					    <a class="dropdown-item" href="#">Msi</a>
-					    <a class="dropdown-item" href="#">Asrock</a>
-					    <a class="dropdown-item" href="#">Aorus</a>
-					   <div class="dropdown-divider"></div>
-					  </div>
-						<li class="nav-item">
+					<li class="nav-item">
 						  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 					</li>
 				</ul>
@@ -96,6 +79,7 @@
 				</div>
 			</div>
 <section class="ContenedorProducto">
+	<a href="pages/RamHyperx.html">
 	<div class="ContenedorProducto--Productos  card" style="width: 18rem;">
 			<img src="./assets/img/22.png" class="card-img-top" alt="...">
 			<h5 class="card-title ContenedorProducto--Text">Memoria Ram Kigston Hyperx RGB 16Gb</h5>
@@ -109,6 +93,7 @@
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div>				
 	</div>
+	</a>
 	<a href="pages/producto.html">
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
 		<img src="./assets/img/21.png" class="card-img-top" alt="...">
@@ -123,7 +108,8 @@
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div> 
 	</div>
-	</a>			
+	</a>
+	<a href="pages/Ryzenthreadripper.html">			
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
 			<img src="./assets/img/19.png" class="card-img-top" alt="...">
 			<h5 class="card-title ContenedorProducto--Text">Ryzen threadripper</h5>
@@ -137,7 +123,8 @@
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div>
 	</div>	
-				
+	</a>
+	<a href="pages/PlacaMadreMsi.html">			
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
 			<img src="./assets/img/20.png" class="card-img-top" alt="...">
 			<h5 class="card-title ContenedorProducto--Text">Placa madre msi amd B450</h5>
@@ -151,6 +138,7 @@
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div>
 	</div>
+	</a>
 </section>
 <div class="container">
 	<div class="row">
@@ -160,11 +148,12 @@
 	</div>
 </div>
 <section class="ContenedorProducto">
+	<a href="pages/Rx570.html">
 	<div class="ContenedorProducto--Productos  card" style="width: 18rem;">
 			<img src="./assets/img/10.png" class="card-img-top" alt="...">
 			<h5 class="card-title ContenedorProducto--Text">Rx 570 4gb</h5>
 			<div class="TextProduc">
-				 <p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">28.000 $</p> 
+				 <p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">65.000 $</p> 
 			</div>
 			<div class="TextProduc">
 				<p class="TextProduc--CambioP">Cuotas Sin Interes 12</p>
@@ -173,6 +162,8 @@
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div>				
 	</div>
+	</a>
+	<a href="pages/Ryzen5.html">
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
 		<img class="ContenedorProducto--Img" src="./assets/img/23.png" class="card-img-top" alt="...">
 		<h5 class="card-title ContenedorProducto--Text">Ryzen 5 3600g</h5>
@@ -185,12 +176,14 @@
 		<div class="TextProduc">
 			 <p class="TextProduc--ColorP">Envio Gratis</p> 
 		</div>				 
-	</div>			
+	</div>
+	</a>
+	<a href="pages/Fuente750W.html">			
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
-			<img class="ContenedorProducto--Img2" src="./assets/img/19.png" class="card-img-top" alt="...">
-			<h5 class="card-title ContenedorProducto--Text">Ryzen threadripper</h5>
+			<img class="ContenedorProducto--Img2" src="./assets/img/26.png" class="card-img-top" alt="...">
+			<h5 class="card-title ContenedorProducto--Text">Fuente 750W Sentey MBP750-HS 80 Plus Bronze</h5>
 			<div class="TextProduc">
-				<p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">50.000 $</p> 
+				<p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">20.000 $</p> 
 			</div>
 			<div class="TextProduc">
 				<p class="TextProduc--CambioP">Cuotas Sin Interes 12</p>
@@ -198,12 +191,14 @@
 			<div class="TextProduc">
 				 <p class="TextProduc--ColorP">Envio Gratis</p> 
 			</div>
-	</div>					
+	</div>
+	</a>
+<a href="pages/GabyneteSenteyShield.html">			
 	<div class="ContenedorProducto--Productos card" style="width: 18rem;">
-		<img class="ContenedorProducto--Img3" src="./assets/img/20.png" class="card-img-top" alt="...">
-		<h5 class="card-title ContenedorProducto--Text">Placa madre msi amd B450</h5>
+		<img class="ContenedorProducto--Img3" src="./assets/img/31.png" class="card-img-top" alt="...">
+		<h5 class="card-title ContenedorProducto--Text">Gabinete Shield V2 Sentey</h5>
 		<div class="TextProduc">
-			<p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">22.000 $</p> 
+			<p class="TextProduc__Tamaño TextProduc__Tamaño--Estilo">9.000 $</p> 
 		</div>
 		<div class="TextProduc">
 			<p class="TextProduc--CambioP">Cuotas Sin Interes 12</p>
@@ -212,19 +207,21 @@
 			<p class="TextProduc--ColorP">Envio Gratis</p> 
 		</div>
 	</div>
+</a>	
 </section>
-		<hr> 
-		<section class="SocialDelIndex"> 
-		<img class="SocialDelIndex--TamañoIndex" src="./assets/img/3.png" alt="">
-		<img class="SocialDelIndex--TamañoIndex" src="./assets/img/2.png" alt="">
-		<a href="https://www.instagram.com/hybl.store/" target="_blankj"><img class="SocialDelIndex--TamañoIndex" src="./assets/img/1.png" alt=""><a> 
-		</section>
-			<section> 
-				<div>
-					<p class="col-lg-2">Terminos y condiciones</p>
-			   		<p class="col-lg-2">Ayuda</p>
-		   		</div>
-	   		</section>
+<section class="ParteDeAbajoColor">
+	<section class="Social"> 
+	<img class="Social--TamañoIndex" src="./assets/img/3.png" alt="">
+	<img class="Social--TamañoIndex" src="./assets/img/2.png" alt="">
+	<a href="https://www.instagram.com/hybl.store/" target="_blankj"><img class="SocialDelIndex--TamañoIndex" src="./assets/img/1.png" alt=""><a> 
+	</section>
+		<section> 
+			<div>
+				<p class="col-lg-2">Terminos y condiciones</p>
+			   	<p class="col-lg-2">Ayuda</p>
+		   	</div>
+	   	</section>
+</section>
 	   	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
 	   </script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
