--- a/pages/crear cuenta.html
+++ b/pages/crear cuenta.html
@@ -23,19 +23,16 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/inicio de sesion.html">iniciar sesion <span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="../pages/inicio de sesion.html">Iniciar sesion <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/crear cuenta.html">crear cuenta<span class="sr-only">(current)</span></a>
+					  <a class="nav-link" href="../pages/crear cuenta.html">Crear cuenta<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/contactanos.html">contactanos</a>
+					  <a class="nav-link" href="../pages/contactanos.html">Contactanos</a>
 					</li>
 					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/crea tu pc.html">crea tu pc</a>
-					</li>
-					<li class="nav-item active">
-					  <a class="nav-link" href="../pages/historial.html">historial</a>
+					  <a class="nav-link" href="../pages/historial.html">Historial</a>
 					</li>
 					      <li class="nav-item dropdown">
 					        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -78,16 +75,20 @@
 			<div class="botonDeCrearCuenta">
 		 		<button class="botonDeCrearCuenta--Diseño" type="button">Crear cuenta</button>
 	 		</div>
- 	</div><hr>
- 	<section class="Social"> 
-		<img class="Social--Tamaño" src="../assets/img/3.png" alt="">
-		<img class="Social--Tamaño" src="../assets/img/2.png" alt="">
-		<a href="https://www.instagram.com/hybl.store/" target="_blankj"><img class="Social--Tamaño" src="../assets/img/1.png" alt=""><a> 
-		</section>
-		<section>
-		<p>Terminos y condiciones</p>
-		<p>Ayuda</p> 
+ 	</div>
+<section class="ParteDeAbajoColor">
+	<section class="Social"> 
+	<img class="Social--TamañoIndex" src="../assets/img/3.png" alt="">
+	<img class="Social--TamañoIndex" src="../assets/img/2.png" alt="">
+	<a href="https://www.instagram.com/hybl.store/" target="_blankj"><img class="SocialDelIndex--TamañoIndex" src="../assets/img/1.png" alt=""><a> 
 	</section>
+		<section> 
+			<div>
+				<p class="col-lg-2">Terminos y condiciones</p>
+			   	<p class="col-lg-2">Ayuda</p>
+		   	</div>
+	   	</section>
+</section>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
