--- a/pages/Rx570.html
+++ b/pages/Rx570.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Publicacion i5 9400f ">
+	<meta name="description" content="Publicacion Placa de Video MSI AMD Radeon RX 570 ARMOR OC ">
    	<meta name="keywords"  content="H&BL, Compra, Publicacion, Productos, venta,">
 	<title>H&BL Store</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -36,18 +36,6 @@
 					</li>
 					
 					<li class="nav-item dropdown">
-					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					  	Seccion
-					  </a>
-					  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					    <a class="dropdown-item" href="#">amd</a>
-					    <a class="dropdown-item" href="#">intel</a>
-					    <a class="dropdown-item" href="#">Radeon</a>
-					    <a class="dropdown-item" href="#">Msi</a>
-					    <a class="dropdown-item" href="#">Asrock</a>
-					    <a class="dropdown-item" href="#">Aorus</a>
-					   <div class="dropdown-divider"></div>
-					  </div>
 						<li class="nav-item">
 						  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 					</li>
